--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "g5front",
   "version": "1.2.0",
   "private": false,
+  "homepage": "https://kamilprogram.github.io/ibs-resume-convertor",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.2.3"
   },
   "publishConfig": {
     "registry": "https://repo.trainee.ru.com/repository/front/"
